cmake_minimum_required(VERSION 2.8)
project( opencv-game-engine )
find_package( OpenCV REQUIRED )
find_package( Curses REQUIRED )
add_executable( main main.cpp )
add_executable( main_snake main_snake.cpp )
include_directories(${CURSES_INCLUDE_DIR})
target_link_libraries( main ${OpenCV_LIBS} ${CURSES_LIBRARIES} )
target_link_libraries( main_snake ${OpenCV_LIBS} ${CURSES_LIBRARIES} )
